--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         #pdf-container {
             width: 100%;
-            height: 100vh; /* Usar toda la altura de la ventana */
+            height: 100%; /* Ajustar al 100% del contenedor padre */
             overflow-y: scroll; /* Activar desplazamiento */
             margin: 0;
             padding: 0;
@@ -22,6 +22,13 @@
             box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
             max-width: 100%; /* Ajuste al ancho de la ventana */
             height: auto; /* Mantener la proporción del PDF */
+        }
+
+        html, body {
+            margin: 0;
+            padding: 0;
+            height: 100%; /* Asegurarse de que el contenedor herede el 100% */
+            overflow: hidden; /* Evitar desplazamiento del cuerpo */
         }
     </style>
 </head>
@@ -108,6 +115,14 @@
             isRendering = false;
         };
 
+        const adjustHeight = () => {
+            const windowHeight = window.innerHeight;
+            container.style.height = `${windowHeight}px`;
+        };
+
+        window.addEventListener('resize', adjustHeight);
+        adjustHeight();
+
         pdfjsLib.getDocument(url).promise.then(async (pdf) => {
             pdfDoc = pdf;
 
@@ -125,3 +140,4 @@
     </script>
 </body>
 </html>
+
